Fix issues with task card text overflow
Tasks with long names or descriptions would overflow the task card.
This has been rectified by setting word-break: break-all.

Additionally, descriptions and buttons are pushed to the bottom of the
task card to maintain a consistent layout.

--- a/src/style.scss
+++ b/src/style.scss
@@ -176,6 +176,7 @@ a {
   gap: 8px;
   grid-template-columns: 1fr 1fr;
   padding: 16px;
+  word-break: break-all;
 
   &__heading,
   &__due-date,
@@ -189,10 +190,12 @@ a {
   }
 
   &__desc {
+    align-self: end;
     color: #909090;
   }
 
   &__buttons-container {
+    align-self: end;
     display: flex;
     gap: 8px;
   }
